VM-131 Add endpoint consulta_cuenta
