# control/serializers.py
@@ -1,0 +1,39 @@
+from rest_framework import serializers
+
+from common.exceptions import CustomValidationError
+
+
+class ConsultaCuentaSerializer(serializers.Serializer):
+    CUENTA = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    CIF = serializers.CharField(min_length=50, required=False, default="", allow_blank=True)
+    ID_OWNER = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    TIPO_IDENTIFICACION = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    DOC_IDENTIFICACION = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    MONEDA = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    EMISOR = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    USUARIO_ATZ = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+    ACCESO_ATZ = serializers.CharField(max_length=50, required=False, default="", allow_blank=True)
+
+
+    class Meta:
+        fields = ('CUENTA', 'CIF', 'ID_OWNER', 'TIPO_IDENTIFICACION', 'DOC_IDENTIFICACION',
+                  'MONEDA', 'EMISOR', 'USUARIO_ATZ', 'ACCESO_ATZ')
+
+    def validate(self, data):
+        data = super(ConsultaCuentaSerializer, self).validate(data)
+        cuenta = data.get('CUENTA', "").strip()
+        cif = data.get('CIF', "").strip()
+        id_owner = data.get('ID_OWNER', "").strip()
+        tipo_identificacion = data.get('TIPO_IDENTIFICACION', "").strip()
+        doc_identificacion = data.get('DOC_IDENTIFICACION', "").strip()
+
+        data['CUENTA'] = cuenta
+        data['CIF'] = cif
+        data['ID_OWNER'] = id_owner
+        data['TIPO_IDENTIFICACION'] = tipo_identificacion
+        data['DOC_IDENTIFICACION'] = doc_identificacion
+
+        if len(cuenta) == 0 and len(cif) == 0 and len(id_owner) == 0 and len(tipo_identificacion) == 0 and len(doc_identificacion) == 0:
+                raise CustomValidationError(detail=u'No fue proporcionado ningun filtro para hacer la busqueda',
+                                            code='400')
+        return data
